# Evaluation-of-machine-translation-by-NLP

./: README.md  pyproject.toml  setup.py
.github/workflows/workflows/: pipy_release.yml
duc-fa/: bleu.ipynb  chrf.ipynb  gleu.ipynb  meteor.ipynb  nist.ipynb  tool.ipynb
metric/: bleu_score.py  chrf_score.py  gleu_score.py  meteor_score.py  nist_score.py  wer_score.py
metric/tool/: counter_element.py  n_gram.py  overlaps_dict.py
